collapse button fix

--- a/static/dashboard/css/relax.css
+++ b/static/dashboard/css/relax.css
@@ -409,6 +409,7 @@ select{
 .collapse{
     display:flexbox;
     margin-left: 90%;
+    margin-top: 2%;
     background-color: black;
 }
 
